test/libsolidity/syntaxTests/nameAndTypeResolution/187_large_utf8_codepoint.sol
contract C {
    string s = "\xf0\x9f\xa6\x84";
}
// ----
// SyntaxError 5811: (28-46): Non-ASCII characters found
